feat-07: Owner crud created
